Add tests for AppointmentService and enhance null-checking
Implemented a new test class, AppointmentServiceImplTest, for comprehensive testing of AppointmentService methods such as create, get, and delete appointments. In parallel, refined null checking in the AppointmentService implementation, specifically in the create and startStop methods, for more robust error handling.